# particle-collision

./: .clang-format  CMakeLists.txt  benchmark.py  benchmark2.py
src/: ColorGradient.cpp  CudaParticle.h  Particle.cpp  Particle.hpp  bench.cpp  gpu_physics.cu  main-mpi.cpp  main.cpp
